[trash] Fix restoring entries with absolute paths in disk-local trash

If a mounted disk has a local trash folder we save a relative path to the mountpoint/trashdir in the trashinfo and restore accordingly.

However, an app writing to the trash might set an absolute path. Handle that properly

BUG: 463751